removing the javax.lang.model related code to be moved to a separate bug