@@ -105,13 +105,17 @@ public class JavaxLangModelForRecords extends TestRunner {
         tb.writeJavaFiles(r,
                 "record R(int i) {}");
 
-        List<String> expected = List.of(
-                "Note: field: i",
-                "Note: record component: i");
+        List<String> expected = List.of("Note: field: i",
+                "Note: record component: i",
+                "Note: testQualifiedClassForProcessing" + File.separator + "src" + File.separator
+                     + "R" + File.separator + "R.java uses preview language features.",
+                "Note: Recompile with -Xlint:preview for details.");
 
         for (Mode mode : new Mode[] {Mode.API}) {
             List<String> log = new JavacTask(tb, mode)
-                    .options("-processor", QualifiedClassForProcessing.class.getName())
+                    .options("-processor", QualifiedClassForProcessing.class.getName(),
+                            "--enable-preview",
+                            "-source", Integer.toString(Runtime.version().feature()))
                     .files(findJavaFiles(src))
                     .outdir(classes)
                     .run()
